# WebDataScraper

./: LICENSE  README.md
.github/workflows/: python-publish.yml
WebDataScraper/: README.md  pyproject.toml  setup.py
